--- a/README
+++ b/README
@@ -69,4 +69,4 @@ To complete this assignment, a distro of Linux (any version) was required. The o
 
 ## Question 3- Comment on the frequency of exits – does the number of exits increase at a stable rate? Or are there more exits performed during certain VM operations? Approximately how many exits does a full VM boot entail? 
 
-The frequency of exits that inside the KVM occurs at a fairly stable rate - this is dependent on the VM operations that are being performed. The stable rate means the number of exits for most common VM operations executed for a VM within a VM occur at the same measured rate. Depending on the types of exits and exit handling controls enabled, the number of exits performed vary. 
+The frequency of exits that inside the KVM occurs at a fairly stable rate - this is dependent on the VM operations that are being performed. The stable rate means the number of exits for most common VM operations executed for a VM within a VM occur at the same measured rate. Depending on the types of exits and exit handling controls enabled, the number of exits performed vary. Based on the VM(s) installed during out tests, the number of cycles varied and the range was between: 1-3 million exits.
